test/assignment/to_this.lox
class Foo {
  Foo() {
    this = "value"; // error: invalid assignment target
  }
}

Foo();
